# tbafs

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  FORMAT.md  LICENSE  README.md  adfs.py  pyproject.toml  tbafs.py  test.sh
.github/workflows/: ci.yml
comparison/Blurp/: ReadME,fff
comparison/Blurp/!Blurp/: !Boot,feb  !Run,feb  !RunImage,ff8  !Sprites,ff9  GameCols,005  JukeboxMod,ffa  LEVELS,0af  NiceDrums,0ae  Rave,0ae  ScrollText,ffd
comparison/Blurp/!Blurp/Graphics/: Aura,004  BackSprs,004  BigChars,004  CharSet,004  Digits,004  EditSprs,004  MiscSprs,004  Monsters,004  MoreChars,004  Palette,004  Scenery,004  SmSprites,004  TitleSprs,004  You,004
comparison/Blurp/!Blurp/Samples/: Bass+Hihat,ffd  ElecTom,cb5  FullMinor,ffd  Maj2nd,ffd  MajRoot,ffd  MinRoot,ffd  PANFLUTE,ffd  Pipes,ffd  SN+HI,ffd  Sample1,cb5  ShortBass,ffd  Snare,cb5  Synth,cb5  SynthBass,ffd  SynthBass2,ffd  Touch01,cb5  Xylophone2,ffd  strings2,ffd
comparison/Blurp/!Blurp/SoundFX/: Ooh (Rev),003
docs/: NotesFromDisassembly.md  squash.html
samples/: Blurp.b21  BlurpRPC.b21  FinalLook.b21  IRClient.b21  Windows.b21
