[project]
name = "tbafs"
version = "1.0.0"
description = "TBAFS archive extractor for RISC OS .b21 files"
requires-python = ">=3.10"
license = "MIT"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
